fixed top spacing
increased margin-top on main

--- a/intro-component-with-signup-form/style.css
+++ b/intro-component-with-signup-form/style.css
@@ -26,7 +26,7 @@ main {
     align-items: center;
     width: 1050px;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 80px;
 }
 h1 {
     font-size: 2.6rem;
